# missaocertificacaomundo1

./: .gitignore  README.md  db.sqlite3  main.py  missaocertificacaomundo1.code-workspace  pyproject.toml  requirements.txt
app/components/: __init__.py
app/components/application/: __init__.py
app/components/errors/: __init__.py  _custom_bad_request_view.py  _custom_error_view.py  _custom_page_not_found_view.py  _custom_permission_denied_view.py
app/components/home/: __init__.py  get.py
app/components/signin/: get.py  post.py
app/components/signout/: __init__.py  get.py  post.py
app/components/signup/: get.py  post.py
app/decorators/: __init__.py
app/decorators/authenticated/: __init__.py  _is_authenticated.py  _not_authenticated.py
app/decorators/permissions/: __init__.py  _load.py  _validate.py
app/forms/: __init__.py  application_department.py  application_jobposition.py  application_people.py  application_permissions_sod.py  configuration_password.py  signin.py  signup.py
app/migrations/: 0001_initial.py  0002_alter_applicationdepartments_department_and_more.py  0003_applicationpermissionssod.py
app/models/: __init__.py  application_departments.py  application_jobpositions.py  application_passwords.py  application_peoples.py  application_permissions.py  application_permissions_sod.py
app/urls/: __init__.py
app/urls/application/: __urls.py
app/urls/home/: __urls.py
app/urls/signin/: __urls.py
app/urls/signout/: __urls.py
docs/getstarted/: linux.md  windows.md
project/: settings.py  urls.py
project/environments/: .env
(+215 files in other folders)
