[tool.poetry]
name = "missaocertificacaomundo1"
version = "0.1.0"
description = ""
authors = ["Wellington Fonseca <wellington.cesar.fonseca@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
